@@ -21,10 +21,6 @@ dependencies not included in the repository. This can be checked if you run the 
 'slpkg -t slackr <package>'. (Example: noticed that the package 'digikam' indicate 
 dependence 'ffmpeg' but that is not available from the repository itself).
 
-Slackonly (slonly) repository contains no dependencies on file PACKAGES.TXT and this makes
-it difficult to automatically resolve dependencies and in the file PACKAGES.TXT and some
-lines with 'PACKAGE NAME:' there is no package so 'slpkg' can not find package.
-
 Studioware (studio), Alien's ktown (ktown), Alien's multilib (multi), Slacke E17 and E18
 and Alien's restricted repository has no reference dependencies.
 
