@@ -26,7 +26,7 @@ Usage: slpkg Commands:
              [-q --list, [...] --add, --remove]
              [-q --build, --install, --build-install]
              [-g --config, --config=[editor]]
-             [-l all, official, non-official, --index]
+             [-l [repository], --index]
              [-c [repository] --upgrade]
              [-s [repository] [package...]
              [-t [repository] [package]
@@ -46,8 +46,8 @@ Commands:
    re-create                                recreate package lists  
    repo-add [repository name] [URL]         add custom repository
    repo-remove [repository]                 remove custom repository 
-   repolist                                 list all repositories
-   repoinfo [repository]                    repository information
+   repo-list                                list all repositories
+   repo-info [repository]                   repository information
    update slpkg                             check and update slpkg
 
 Optional arguments:
@@ -58,10 +58,10 @@ Optional arguments:
   -q, --list, [package...] --add, --remove  add, remove SBo packages in queue
   -q, --build, --install, --build-install   build, install packages from queue
   -g, --config, --config=<editor>           configuration file management
-  -l, all, official, non-official, --index  list of installed packages
+  -l, [repository], --index                 list of repositories packages
   -c, [repository] --upgrade                check for updated packages
-  -s, [repository] [package...]             download, build & install
-  -t, [repository] [package]                tracking dependencies
+  -s, [repository] [package...]             download, build & install packages
+  -t, [repository] [package]                package tracking dependencies
   -p, [repository] [package], --color=[]    print package description
   -n, [package]                             view SBo packages through network
   -f, [package...]                          find installed packages
@@ -171,8 +171,7 @@ Print configuration file or edit with editor.
 .SS -l , list of installed packages
 \fBslpkg\fP \fB-l\fP <\fIall\fP> \fIofficial\fP \fInon-official\fP \fI--index\fP
 .PP
-List of installed packages by category official or non-official. The repository 'slack' must
-be enabled to work properly 'official' and 'non-official' lists.
+List of packages per repository. Support command 'grep' like '# slpkg -l sbo | grep "python"'.
 
 .SS -c , check if your packages is up to date
 \fBslpkg\fP \fB-c\fP <\fIrepository\fP> \fI--upgrade\f
@@ -180,7 +179,7 @@ be enabled to work properly 'official' and 'non-official' lists.
 Check your packages is up to date.
 
 .SS -s , download, build and install package with all dependencies
-\fBslpkg\fP \fB-s\fP <\fIrepository\fP> <\fIname of package\fP>
+\fBslpkg\fP \fB-s\fP <\fIrepository\fP> <\fIname of packages\fP>
 .PP
 Installs or upgrade packages from the repositories with automatically resolving all 
 dependencies of the package. Also installs the official distribution Slackware 
@@ -202,6 +201,7 @@ Print package description with color. Available colors: red, green, yellow, cyan
 \fBslpkg\fP \fB-f\fP <\fIname of packages\fP>
 .PP
 Find installed packages with view total file size. 
+Example you can view all installed sbo packages like '# slpkg -f _SBo'.
 
 .SS -n , find packages from SBo repositority
 \fBslpkg\fP \fB-n\fP <\fIname of package\fP>
